<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="stRoomData" Id="{38dbd490-63c5-420a-8bd7-131c8dfcb376}">
    <Declaration><![CDATA[TYPE stRoomData :
STRUCT
	{attribute addProperty Name "<#Actual room temperature °C#>"}
	Temperature : REAL;
	{attribute addProperty Name "<#Actual room humidity %#>"}
	Humidity : REAL;
	{attribute addProperty Name "<#Actual room VOC %#>"}
	VOC : REAL;
	{attribute addProperty Name "<#Actual room CO2 concentration ppm#>"}
	CO2 : REAL;
	{attribute addProperty Name "<#Actual room absolute humidity g/m3#>"}
	AbsoluteHumidity : REAL;
	{attribute addProperty Name "<#Actual room enthalpy kJ/k#>"}
	Enthalpy : REAL;
	{attribute addProperty Name "<#Actual room dew point °C#>"}
	DewPoint : REAL;
	{attribute addProperty Name "<#Actual room CO2 VOC mix#>"}
	CO2VOC_MIX : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>